--- a/desktop/css/buy-form.css
+++ b/desktop/css/buy-form.css
@@ -3,7 +3,7 @@
     display: flex;
     -ms-flex-wrap: wrap; /* IE10 */
     flex-wrap: wrap;
-    margin: 0 -16px;
+    margin: auto;
   }
   
   .col-25 {
@@ -59,6 +59,7 @@
   label {
     margin-bottom: 10px;
     display: block;
+    color: whitesmoke;
   }
   
   .icon-container {
@@ -68,19 +69,20 @@
   }
   
   .btn {
-    background-color: #4CAF50;
+    background-color: rgb(43, 43, 43);
     color: white;
     padding: 12px;
-    margin: 10px 0;
+    margin: auto;
+    display: block;
     border: none;
-    width: 100%;
+    width: 70%;
     border-radius: 3px;
     cursor: pointer;
     font-size: 17px;
   }
   
   .btn:hover {
-    background-color: #45a049;
+    background-color: rgb(17, 17, 17);
   }
   
   span.price {
