--- a/desktop/css/buy-form.css
+++ b/desktop/css/buy-form.css
@@ -84,6 +84,10 @@
   .btn:hover {
     background-color: rgb(17, 17, 17);
   }
+
+  .btn:active {
+    background-color: rgb(0, 0, 0);
+  }
   
   span.price {
     float: right;
