--- a/desktop/css/nav.css
+++ b/desktop/css/nav.css
@@ -45,14 +45,15 @@ float: right;
 
 .countdown {
     float: left;
+    font-size: 2em;
     color: rgb(255, 195, 85);
-    line-height: 40px;
+    line-height: 10px;
     height: 100%;
     text-align: center;
     vertical-align: middle;
-    padding: 15px 15px;
+    padding: 15px 40px;
     text-decoration: none;
-    font-size: 25px; 
+    
 }
 
 @media screen and (max-width: 600px) {
