--- a/desktop/css/buy-form.css
+++ b/desktop/css/buy-form.css
@@ -1,23 +1,22 @@
 .row {
-    display: -ms-flexbox; /* IE10 */
     display: flex;
-    -ms-flex-wrap: wrap; /* IE10 */
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     margin: auto;
   }
   
   .col-25 {
-    -ms-flex: 25%; /* IE10 */
+    -ms-flex: 25%;
     flex: 25%;
   }
   
   .col-50 {
-    -ms-flex: 50%; /* IE10 */
+    -ms-flex: 50%;
     flex: 50%;
   }
   
   .col-75 {
-    -ms-flex: 75%; /* IE10 */
+    -ms-flex: 75%;
     flex: 75%;
   }
   
@@ -60,6 +59,8 @@
     margin-bottom: 10px;
     display: block;
     color: whitesmoke;
+    font-family: Verdana;
+
   }
   
   .icon-container {
@@ -79,6 +80,8 @@
     border-radius: 3px;
     cursor: pointer;
     font-size: 17px;
+    font-family: Verdana;
+
   }
   
   .btn:hover {
@@ -96,10 +99,23 @@
 
   .row h3 {
     text-align: left;
-	color: rgb(255, 195, 85)
+	  color: rgb(255, 195, 85)
+  }
+
+  b {
+    margin-bottom: 10px;
+    display: block;
+    color: whitesmoke;
+    font-family: Verdana;
+    font-size: 2em;
   }
   
-  /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
+  .main_label {
+    font-size: 2.2em;
+    text-align: center;
+
+  }
+
   @media (max-width: 800px) {
     .row {
       flex-direction: column-reverse;
