--- a/mobile/css/mobile-style.css
+++ b/mobile/css/mobile-style.css
@@ -2,15 +2,14 @@
 	Import example 
 	Notice how the path begins from the same directory example-style.css is in.
 */
-@import 'columns.css';
-@import 'nav.css';
-@import 'buy-form.css';
+@import 'mobile-columns.css';
+@import 'mobile-nav.css';
+@import 'mobile-buy-form.css';
 
 html, body, main {
 	height: 100%;
 	margin: 0;
 	overflow-y: hidden; 
-
 }
 
 body {
@@ -27,8 +26,8 @@ body {
 	padding: 10px;
 	background: rgba(70, 70, 70, 0.705);
 	margin: auto;
-	width: 60%;
-	height: 87.5%;
+	width: 90%;
+	height: 80%;
 	overflow-y: scroll; 
 }
 
@@ -45,7 +44,7 @@ h3 {
 p {
 	color: rgb(255, 255, 255);
 	font-family: Verdana;
-
+	font-size: 80%;
 }
 
 .grid {
@@ -61,13 +60,13 @@ p {
 	display: block;
 	position: relative;
 	float: left;
-	padding: 20px;
+	padding: 10px;
+	max-width: 30%;
 }
 
 .youtube-video {
 	margin: auto;
 	display:block;
-	width: 60%;
-	height: 30em;
+	max-width: 80%;
 	padding-bottom: 10px;
 }
