--- a/mobile/css/mobile-buy-form.css
+++ b/mobile/css/mobile-buy-form.css
@@ -32,7 +32,7 @@
   }
   
   input[type=text] {
-    width: 55%;
+    width: 85%;
     margin-bottom: 20px;
     padding: 12px;
     border: 1px solid #ccc;
@@ -99,7 +99,7 @@
 
   .row h3 {
     text-align: left;
-	  color: rgb(255, 195, 85)
+    color: rgb(255, 195, 85);
   }
 
   b {
@@ -111,7 +111,7 @@
   }
   
   .main_label {
-    font-size: 2.2em;
+    font-size: 1.8em;
     text-align: center;
 
   }
